--- a/gradle/compat-libs.versions.toml
+++ b/gradle/compat-libs.versions.toml
@@ -13,13 +13,13 @@ eldritchMobs = "734d5fc"
 fallflyinglib = "3.0.0-beta.2"
 flk = "1.6.0+kotlin.1.5.0"
 golemsGalore = "3328376" # v1.0.0+mc1.17
-haema = "3444333" # v1.7.4
+haema = "3596400" # v1.8.2
 libgui = "3.3.5+1.16.5"
 mobz = "3498091"
 modmenu = "3.0.0"
 omegaConfig = "1.2.1-1.18.1"
 origins = "1.3.1"
-patchouli = "1.18-61-FABRIC-SNAPSHOT"
+patchouli = "1.18.1-65-SNAPSHOT"
 pehkui = "3.1.0"
 reach = "2.1.1"
 shea = "1.0.1"
